package com.example.auth_service.model;

public enum OrganizationStatus {
    ACTIVE,
    SUSPENDED
}

