package com.example.auth_service.model;

public enum UserStatus {
    ACTIVE,
    SUSPENDED,
    PENDING
}

